--- a/ui/comprehensive_bpmn_modeler.html
+++ b/ui/comprehensive_bpmn_modeler.html
@@ -177,6 +177,18 @@
             box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
         }
 
+        .xml-editor:disabled {
+            background: #f5f5f5;
+            color: #666;
+            cursor: not-allowed;
+            opacity: 0.8;
+        }
+
+        .xml-editor:disabled:focus {
+            background: #f5f5f5;
+            box-shadow: none;
+        }
+
         .xml-view {
             margin-top: 20px;
             padding: 15px;
@@ -315,6 +327,65 @@
             margin-bottom: 2px;
         }
 
+        /* XML Edit Toggle Switch Styles */
+        .xml-edit-toggle {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-left: 15px;
+        }
+
+        .toggle-label {
+            font-size: 12px;
+            color: #666;
+            font-weight: 500;
+        }
+
+        .toggle-switch {
+            position: relative;
+            display: inline-block;
+            width: 40px;
+            height: 20px;
+        }
+
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 20px;
+        }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 2px;
+            bottom: 2px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+
+        input:checked+.slider {
+            background-color: #007bff;
+        }
+
+        input:checked+.slider:before {
+            transform: translateX(20px);
+        }
+
         /* Ensure the canvas container can handle XML editor scrolling */
         .canvas-container {
             flex: 2;
@@ -347,6 +418,13 @@
             <button class="toggle-btn" onclick="switchView('xml')">XML View</button>
             <button class="toggle-btn" onclick="clearModel()"
                 style="background: #dc3545; color: white; border-color: #dc3545;">Clear All</button>
+            <div class="xml-edit-toggle">
+                <label class="toggle-switch">
+                    <input type="checkbox" id="xml-edit-toggle" onchange="toggleXMLEditing()">
+                    <span class="slider"></span>
+                </label>
+                <span class="toggle-label">XML Edit</span>
+            </div>
         </div>
     </div>
 
@@ -356,7 +434,7 @@
         <!-- Canvas Container -->
         <div class="canvas-container">
             <div id="canvas" class="canvas"></div>
-            <textarea id="xml-editor" class="xml-editor hidden"></textarea>
+            <textarea id="xml-editor" class="xml-editor hidden" disabled></textarea>
         </div>
 
         <!-- Properties Panel -->
@@ -370,6 +448,7 @@
                     <li><strong>Ctrl+S</strong> - Export diagram</li>
                     <li><strong>Ctrl+Shift+S</strong> - Manual save to cache</li>
                     <li><strong>Ctrl+R</strong> - Refresh canvas</li>
+                    <li><strong>XML Edit Toggle</strong> - Enable/disable XML editing</li>
                 </ul>
             </div>
             <div id="properties-content">
@@ -381,7 +460,7 @@
     <div class="xml-view">
         <strong>Current XML:</strong>
         <div style="font-size: 11px; color: #666; margin-bottom: 5px;">
-            💡 Switch to XML View to edit directly - changes auto-save every 500ms
+            💡 Switch to XML View to see the generated XML. Use the "XML Edit" toggle to enable direct editing.
         </div>
         <pre id="xml-output">Loading...</pre>
     </div>
@@ -1128,8 +1207,18 @@
         function setupXMLEditor() {
             const xmlEditor = document.getElementById('xml-editor');
 
-            // Add event listeners for real-time editing
-            xmlEditor.addEventListener('input', debounce(syncXMLFromEditor, 500));
+            // Add event listeners for real-time editing only when enabled
+            const toggle = document.getElementById('xml-edit-toggle');
+
+            // Function to setup event listeners
+            function setupEventListeners() {
+                if (toggle.checked) {
+                    xmlEditor.addEventListener('input', debounce(syncXMLFromEditor, 500));
+                } else {
+                    // Remove event listeners when disabled
+                    xmlEditor.removeEventListener('input', debounce(syncXMLFromEditor, 500));
+                }
+            }
 
             // Add syntax highlighting and better editing experience
             xmlEditor.style.fontFamily = 'Monaco, Menlo, "Ubuntu Mono", monospace';
@@ -1140,9 +1229,9 @@
             xmlEditor.style.overflowX = 'hidden';
             xmlEditor.style.overflowY = 'auto';
 
-            // Enable tab key for indentation
+            // Enable tab key for indentation only when editing is enabled
             xmlEditor.addEventListener('keydown', function (e) {
-                if (e.key === 'Tab') {
+                if (e.key === 'Tab' && toggle.checked && !xmlEditor.disabled) {
                     e.preventDefault();
                     const start = this.selectionStart;
                     const end = this.selectionEnd;
@@ -1155,6 +1244,9 @@
 
             // Apply initial styling
             highlightXML(xmlEditor);
+
+            // Setup initial event listeners
+            setupEventListeners();
         }
 
         // Function to force refresh XML highlighting
@@ -1167,8 +1259,11 @@
 
         // Handle XML editor changes with real-time sync
         function syncXMLFromEditor() {
-            if (currentView === 'xml' && modeler) {
-                const xmlEditor = document.getElementById('xml-editor');
+            const xmlEditor = document.getElementById('xml-editor');
+            const toggle = document.getElementById('xml-edit-toggle');
+
+            // Only sync if we're in XML view, editing is enabled, and the editor is not disabled
+            if (currentView === 'xml' && modeler && toggle.checked && !xmlEditor.disabled) {
                 const xmlContent = xmlEditor.value;
 
                 // Store current scroll position and cursor position
@@ -1707,6 +1802,27 @@
                 });
             } catch (error) {
                 console.error('Error extracting extension properties:', error);
+            }
+        }
+
+        // Add function to toggle XML editing
+        function toggleXMLEditing() {
+            const xmlEditor = document.getElementById('xml-editor');
+            const toggle = document.getElementById('xml-edit-toggle');
+            const isEnabled = toggle.checked;
+
+            xmlEditor.disabled = !isEnabled;
+
+            if (isEnabled) {
+                xmlEditor.style.background = '#ffffff';
+                xmlEditor.style.color = '#333';
+                xmlEditor.style.cursor = 'text';
+                updateStatus('XML editing enabled - you can now edit the XML directly', 'success');
+            } else {
+                xmlEditor.style.background = '#f5f5f5';
+                xmlEditor.style.color = '#666';
+                xmlEditor.style.cursor = 'not-allowed';
+                updateStatus('XML editing disabled - XML is read-only', 'info');
             }
         }
     </script>
